# CivilLibs

./: CMakeLists.txt  README.md
KSR/docs/: advancedtopics.doc  architecture.doc  coordinatesystems.doc  fileformats.doc  geometry.doc  gettingstarted.doc  interface.doc  krgcompiler.doc  ksrx.doc  leakwatcher.h  locking.doc  logging.doc  main.doc  points.doc  resources.doc  scenes.doc  subdividing.doc  textures.doc  tools.doc  triangles.doc  tut01.doc  tut02.doc  tut03.doc  tut04.doc  tut05.doc  tut06.doc  version.doc  vertex.doc  viewports.doc  visuals.doc
KSR/include/: base.h  camera.h  effect.h  entity.h  font.h  geometry.h  interface.h  ksr.h  ksrmath.h  leakwatcher.h  light.h  logger.h  memobject.h  patch.h  primitive.h  renderer.h  resource.h  scene backup.h  scene.backup.h  scene.h  scenegraph.h  serialiser.h  settings.h  swapchain.h  timer.h  types.h  viewport.h  visual.h
KSR/mscv6-proj/: KSR.dsw  KeaysToolkit.dsp
KSR/msvc7-proj/: KSR.sln  KeaysToolkit.vcproj  dep.txt
KSR/scripts/: update_ksr.bat  updateksr_old.bat
KSR/src/: camera.cpp  effect.cpp  entity.cpp  font.cpp  geometry.cpp  interface.cpp  ksr.cpp  ksrmath.cpp  light.cpp  logger.cpp  main.cpp  patch.cpp  primitive.cpp  renderer.cpp  resource.cpp  scene backup 2.cpp  scene backup.cpp  (+10 more)
Leakwatcher/: example.cpp  leakwatcher.h
keays_kerb/: CMakeLists.txt
keays_math/: CMakeLists.txt
keays_math/docs/: keays_math.chi  keays_math.chm  keays_math.doxywiz
keays_math/include/: geometry.h  geometry.h.bak  keays_math.h  keays_math.rc  mathhelp.h  resource.h
keays_math/msvc6-project/: keays_math.dsp  keays_math.dsw
keays_math/msvc7-project/: keays_math.sln  keays_math.vcproj
keays_math/msvc8-project/: keays_math.sln  keays_math.vcproj
keays_math/scripts/: clean.bat
keays_math/src/: Defaulteffect.fx.txt  geometry.cpp  geometry.cpp.bak  kmCube.cpp  kmLine.cpp
keays_types/: CMakeLists.txt
keays_types/docs/: keays_types.chi  keays_types.chm  keays_types.doxywiz
keays_types/include/: keays_types.h  keays_types.rc  resource.h
keays_types/msvc12-project/: UpgradeLog.htm  keays_types.sln  keays_types.vcproj  keays_types.vcxproj  keays_types.vcxproj.filters
keays_types/msvc6-project/: keays_types.dsp  keays_types.dsw
keays_types/msvc7-project/: keays_types.sln  keays_types.vcproj
keays_types/msvc8-project/: keays_types.sln  keays_types.vcproj
keays_types/scripts/: cleanup.bat
keays_types/src/: keays_types.cpp
keays_version/: CMakeLists.txt
keays_version/docs/: keays_version.doxywiz
keays_version/include/: keays_version.h
keays_version/lib/: KeaysVersion8md.lib  keaysVersion8mdD.lib
keays_version/msvc6-project/: keays_version.dep  keays_version.dsp  keays_version.dsw
keays_version/msvc7-project/: keays_version.vcproj
keays_version/msvc8-project/: keays_version.sln  keays_version.vcproj
keays_version/src/: keays_version.cpp
(+108 files in other folders)
